--- a/index.html
+++ b/index.html
@@ -1,218 +1,4 @@
-</html>
-<!doctype html>
-<html lang="ko">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FanHub Beta</title>
-  <style>
-    body{font-family:system-ui,Segoe UI,Apple SD Gothic Neo,AppleGothic,Malgun Gothic,sans-serif;margin:0;background:#0b0f14;color:#e7ecf2}
-    header{position:sticky;top:0;z-index:10;background:#0d1117;border-bottom:1px solid #1f2630}
-    .wrap{max-width:980px;margin:0 auto;padding:16px}
-    .grid{display:grid;gap:16px}
-    .card{background:#0f1621;border:1px solid #1f2630;border-radius:14px;padding:16px}
-    .btn{background:#238636;border:none;color:#fff;padding:10px 14px;border-radius:10px;cursor:pointer}
-    .btn.sec{background:#30363d}
-    input,textarea,select{background:#0b0f14;border:1px solid #263042;color:#dbe6f3;border-radius:8px;padding:10px;width:100%}
-    h2{margin:0 0 10px;font-size:20px}
-    .row{display:flex;gap:8px;flex-wrap:wrap}
-    .pill{display:inline-block;padding:6px 10px;border:1px solid #2a3342;border-radius:999px}
-    .muted{color:#93a1b3;font-size:12px}
-    .right{float:right}
-    .danger{background:#b23030}
-    .ok{color:#2ecc71}
-    .err{color:#ff6b6b}
-  </style>
-
-  <!-- ⚠️ 여기 2줄만 바꾸면 연결 완성 -->
-  <script>
-    window.BACKEND_BASE = 'https://stelive-shibuki321.io0907op.workers.dev';
-    window.GOOGLE_CLIENT_ID = '243001175240-k523c0qtpdm3smuck10sih2cg0t7paum.apps.googleusercontent.com';
-  </script>
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-</head>
-<body>
-  <header>
-    <div class="wrap row" style="align-items:center;justify-content:space-between">
-      <div style="font-weight:700">FanHub Beta</div>
-      <div id="auth-area" class="row"></div>
-    </div>
-  </header>
-
-  <main class="wrap grid" style="grid-template-columns:1fr;">
-    <section class="card">
-      <h2>로그인</h2>
-      <div id="signin"></div>
-      <div id="me" class="muted"></div>
-    </section>
-
-    <section class="card">
-      <h2>최애 투표 (월 1회)</h2>
-      <div class="row">
-        <select id="member">
-          <optgroup label="스텔라이브">
-            <option value="akane_lize">아카네 리제</option>
-            <option value="ayatsuno_yuni">아야츠노 유니</option>
-            <option value="shirayuki_hina">시라유키 히나</option>
-            <option value="neneko_mashiro">네네코 마시로</option>
-            <option value="arahashi_tabi">아라하시 타비</option>
-            <option value="aokumo_rin">아오쿠모 린</option>
-            <option value="tenko_shibuki">텐코 시부키</option>
-            <option value="hanako_nana">하나코 나나</option>
-            <option value="yuzuhariko">유즈하 리코</option>
-            <option value="airi_kanna">아이리 칸나</option>
-          </optgroup>
-          <optgroup label="이세계 아이돌">
-            <option value="ine">아이네</option>
-            <option value="jingburger">징버거</option>
-            <option value="lilpa">릴파</option>
-            <option value="viichan">비챤</option>
-            <option value="jururu">주르르</option>
-            <option value="gosegu">고세구</option>
-          </optgroup>
-        </select>
-        <button class="btn" id="voteBtn">투표</button>
-        <button class="btn sec" id="resultBtn">결과 보기</button>
-      </div>
-      <div id="voteMsg" class="muted"></div>
-      <div id="voteResult" class="muted"></div>
-    </section>
-
-    <section class="card">
-      <h2>덕질 일기</h2>
-      <textarea id="diaryText" rows="3" placeholder="오늘의 덕질 기록..."></textarea>
-      <div class="row" style="margin-top:8px">
-        <button class="btn" id="diaryAdd">저장</button>
-        <button class="btn sec" id="diaryReload">새로고침</button>
-      </div>
-      <div id="diaryList" style="margin-top:10px"></div>
-    </section>
-
-    <section class="card">
-      <h2>익명 고백함</h2>
-      <textarea id="confText" rows="3" placeholder="익명 응원/고백을 남겨보세요"></textarea>
-      <div class="row" style="margin-top:8px">
-        <button class="btn" id="confAdd">보내기</button>
-        <button class="btn sec" id="confReload">새로고침</button>
-      </div>
-      <div id="confList" style="margin-top:10px"></div>
-    </section>
-  </main>
-
-  <script>
-    const BASE = () => window.BACKEND_BASE.replace(/\/$/, '');
-    const headers = { 'content-type': 'application/json' };
-    const cred = { credentials: 'include' };
-
-    // Google 버튼 렌더링
-    window.onload = () => {
-      if (window.google && window.google.accounts && window.google.accounts.id) {
-        google.accounts.id.initialize({
-          client_id: window.GOOGLE_CLIENT_ID,
-          callback: onGoogleSignIn
-        });
-        google.accounts.id.renderButton(document.getElementById('signin'), { theme: 'filled_black', size: 'large' });
-      }
-      me();
-      attach();
-    };
-
-    function attach() {
-      by('voteBtn').onclick = vote;
-      by('resultBtn').onclick = voteResults;
-      by('diaryAdd').onclick = diaryAdd;
-      by('diaryReload').onclick = diaryList;
-      by('confAdd').onclick = confessionAdd;
-      by('confReload').onclick = confessionList;
-    }
-
-    function by(id){ return document.getElementById(id); }
-    function esc(s){ return String(s||'').replace(/[&<>"']/g, m=>({"&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"}[m])); }
-
-    async function onGoogleSignIn(res){
-      try{
-        const idToken = res.credential;
-        const r = await fetch(BASE()+'/auth/google', { method:'POST', headers, body: JSON.stringify({ idToken }), ...cred });
-        const j = await r.json();
-        if(j.ok){ by('me').innerHTML = `<span class="ok">로그인 성공</span> — ${esc(j.user.name)} (${esc(j.user.email)}) ${j.user.admin?'· <span class="pill">관리자</span>':''}`; me(); }
-        else by('me').innerHTML = `<span class="err">로그인 실패:</span> ${esc(j.error||'')}`;
-      }catch(e){ by('me').innerHTML = `<span class="err">오류:</span> ${esc(e)}`; }
-    }
-
-    async function me(){
-      try{
-        const r = await fetch(BASE()+'/me', { ...cred });
-        if(!r.ok){ by('auth-area').innerHTML = '<div class="muted">로그인 필요</div>'; return; }
-        const j = await r.json();
-        if(j.ok){
-          by('auth-area').innerHTML = `<div class="row" style="align-items:center"><img src="${esc(j.user.picture||'')}" onerror="this.style.display='none'" style="width:28px;height:28px;border-radius:50%"> <span>${esc(j.user.name)}</span> ${j.user.admin?'<span class="pill">관리자</span>':''} <button class="btn sec" onclick="logout()">로그아웃</button></div>`;
-          diaryList(); confessionList();
-        }
-      }catch{}
-    }
-
-    async function logout(){
-      await fetch(BASE()+'/logout', { method:'POST', ...cred });
-      by('auth-area').innerHTML = '<div class="muted">로그인 필요</div>';
-      by('me').textContent = '';
-    }
-
-    // vote
-    async function vote(){
-      const memberId = by('member').value;
-      const r = await fetch(BASE()+'/vote', { method:'POST', headers, body: JSON.stringify({ memberId }), ...cred });
-      const j = await r.json();
-      by('voteMsg').innerHTML = j.ok? `<span class="ok">✅ 투표 완료:</span> ${esc(memberId)} (${esc(j.month)})` : `<span class="err">❌ ${esc(j.error)}</span>`;
-    }
-    async function voteResults(){
-      const r = await fetch(BASE()+'/vote/results', { ...cred });
-      const j = await r.json();
-      if(!j.ok){ by('voteResult').textContent = '불러오기 실패'; return; }
-      const out = Object.entries(j.counts||{}).sort((a,b)=>b[1]-a[1]).map(([k,v])=>`<div class="row"><span class="pill">${esc(k)}</span> <b>${v}</b></div>`).join('');
-      by('voteResult').innerHTML = out || '<span class="muted">아직 집계 없음</span>';
-    }
-
-    // diary
-    async function diaryList(){
-      const r = await fetch(BASE()+'/diary', { ...cred });
-      if(!r.ok){ by('diaryList').innerHTML = '<span class="muted">로그인 필요</span>'; return; }
-      const j = await r.json();
-      if(!j.ok){ by('diaryList').textContent = '불러오기 실패'; return; }
-      by('diaryList').innerHTML = (j.items||[]).map(it=>`<div class="card" style="padding:10px"><div class="muted">${new Date(it.ts).toLocaleString()}</div><div>${esc(it.text)}</div><div class="row" style="margin-top:6px"><button class="btn danger" onclick="diaryDel('${esc(it.id)}')">삭제</button></div></div>`).join('');
-    }
-    async function diaryAdd(){
-      const text = by('diaryText').value.trim();
-      if(!text){ alert('내용을 입력해 주세요'); return; }
-      const r = await fetch(BASE()+'/diary', { method:'POST', headers, body: JSON.stringify({ text }), ...cred });
-      const j = await r.json();
-      if(j.ok){ by('diaryText').value=''; diaryList(); }
-    }
-    async function diaryDel(id){
-      await fetch(BASE()+'/diary/'+encodeURIComponent(id), { method:'DELETE', ...cred });
-      diaryList();
-    }
-
-    // confessions
-    async function confessionList(){
-      const r = await fetch(BASE()+'/confessions', { ...cred });
-      const j = await r.json();
-      if(!j.ok){ by('confList').textContent = '불러오기 실패'; return; }
-      by('confList').innerHTML = (j.items||[]).map(it=>`<div class="card" style="padding:10px"><div class="muted">${new Date(it.ts).toLocaleString()}</div><div>${esc(it.text)}</div><div class="row" style="margin-top:6px"><button class="btn danger" onclick="confDel('${esc(it.id)}')">관리자 삭제</button></div></div>`).join('');
-    }
-    async function confessionAdd(){
-      const text = by('confText').value.trim();
-      if(!text){ alert('내용을 입력해 주세요'); return; }
-      const r = await fetch(BASE()+'/confessions', { method:'POST', headers, body: JSON.stringify({ text }), ...cred });
-      const j = await r.json(); if(j.ok){ by('confText').value=''; confessionList(); }
-    }
-    async function confDel(id){
-      const r = await fetch(BASE()+'/confessions/'+encodeURIComponent(id), { method:'DELETE', ...cred });
-      if(r.status===403) alert('관리자만 삭제할 수 있습니다');
-      confessionList();
-    }
-
-    // X 이미지 프록시 사용 예시 (필요 시)
-    // <img src="${BASE()}/img?url=${encodeURIComponent('https://pbs.twimg.com/media/XXXX.jpg')}"/>
-  </script>
-</body>
-</html>
+<!doctype html><html lang='ko'><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<link rel="stylesheet" href="styles.css"/>
+<script>window.BACKEND_BASE="https://stelive-shibuki321.io0907op.workers.dev";window.GOOGLE_AUDIENCE="396083519795-tjobbihd8jk9bvr76mf4ofrub5d17i0q.apps.googleusercontent.com";</script>
+<script src="https://accounts.google.com/gsi/client" async defer></script><script src="app.js" defer></script><title>홈</title></head><body><div class="container"><p><strong>Stellive × Isegye Fan Hub</strong> · <a href="index.html">홈</a> · <a href="members.html">멤버</a> · <a href="gallery.html">팬아트</a> · <a href="vote.html">투표</a> · <a href="diary.html">일기</a> · <a href="admin.html">관리</a></p></div><div class='container'><h1>홈</h1><p>파일 복원 빌드(간소화)</p></div></body></html>
