--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="styles.css"/>
 <script>
   window.BACKEND_BASE = "https://stelive-shibuki321.io0907op.workers.dev";
-  window.GOOGLE_AUDIENCE = 396083519795-tjobbihd8jk9bvr76mf4ofrub5d17i0q.apps.googleusercontent.com
+  window.GOOGLE_AUDIENCE = "396083519795-tjobbihd8jk9bvr76mf4ofrub5d17i0q.apps.googleusercontent.com"
 </script>
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="app.js" defer></script>
