--- a/index.html
+++ b/index.html
@@ -1,47 +1,76 @@
 <!doctype html>
 <html lang="ko">
-<head>%%HEAD%%</head>
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⭐</text></svg>">
+<link rel="preconnect" href="https://accounts.google.com">
+<title>Stellive × Isegye Fan Hub</title>
+<link rel="stylesheet" href="styles.css"/>
+<script>
+  window.BACKEND_BASE = "https://stelive-shibuki321.io0907op.workers.dev";
+  window.GOOGLE_AUDIENCE = "396083519795-tjobbihd8jk9bvr76mf4ofrub5d17i0q.apps.googleusercontent.com";
+</script>
+<script src="https://accounts.google.com/gsi/client" async defer></script>
+<script src="app.js" defer></script>
+</head>
 <body>
-%%NAV%%
 
-<main class="container">
-  <section class="hero">
-    <h1>스텔라이브 × 이세계아이돌 팬 허브</h1>
-    <p>구글 로그인 → 최애 설정 → 팬아트/커버곡/투표까지 한 번에!</p>
-    <div id="g_id_onload"
-      data-client_id="396083519795-r5j9hfm32ldtb2gumg2de0njk3ak7j0t.apps.googleusercontent.com"
-      data-context="signin"
-      data-ux_mode="popup"
-      data-callback="onGoogleCredential"
-      data-auto_select="false"></div>
-    <div class="g_id_signin" data-type="standard" data-size="large"></div>
-  </section>
-
-  <section id="live-banner" class="banner" hidden>
-    <span>📡 방송 중! </span><span id="live-names"></span>
-  </section>
-
-  <section class="grid two">
-    <div class="card">
-      <h3>빠른 시작</h3>
-      <ol>
-        <li>우측 상단에서 로그인</li>
-        <li>멤버 페이지에서 <b>최애</b> 추가</li>
-        <li>투표로 마음 표현하기</li>
-      </ol>
+<div class="nav">
+  <div class="nav-inner container">
+    <div class="brand">
+      <div class="logo">☆</div>
+      <div class="title">Stellive × Isegye Fan Hub</div>
+      <span id="liveBadge" class="badge hidden">📡 방송 중</span>
     </div>
-    <div class="card">
-      <h3>오늘의 팬아트</h3>
-      <div id="home-gallery" class="gallery"></div>
+    <div class="tabs">
+      <a class="tab" href="index.html">홈</a>
+      <a class="tab" href="members.html">멤버</a>
+      <a class="tab" href="gallery.html">팬아트</a>
+      <a class="tab" href="vote.html">투표</a>
+      <a class="tab" href="diary.html">일기</a>
+      <a class="tab" href="admin.html">관리</a>
     </div>
-  </section>
+    <div class="userbar">
+      <div id="userBox" class="small">로그인 안됨</div>
+      <button id="btnLogin" class="btn">Google 로그인</button>
+      <button id="btnLogout" class="btn ghost hidden">로그아웃</button>
+    </div>
+  </div>
+</div>
 
-  <section class="diag">
-    <h4>진단</h4>
-    <pre id="diag"></pre>
-  </section>
-</main>
-
-<script src="./app.js"></script>
+<div class="container hero">
+  <h1>어서 와요! 팬 허브 베타</h1>
+  <p>스텔라이브 · 이세계 아이돌을 위한 맞춤 팬 페이지. 로그인하면 즐겨찾기, 투표, 일기 동기화가 됩니다.</p>
+</div>
+<div class="container grid cards-3">
+  <div class="card">
+    <div class="head"><strong>테마</strong></div>
+    <div class="body">
+      <div class="row">
+        <label><input type="radio" name="theme" value="stellive"> 스텔라이브</label>
+        <label><input type="radio" name="theme" value="isegye"> 이세계</label>
+      </div>
+      <p class="small">브라우저에 저장됩니다.</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="head"><strong>라이브 위젯</strong></div>
+    <div class="body" id="liveNowBox">
+      <div class="row"><div class="spinner"></div><span class="small">불러오는 중…</span></div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="head"><strong>빠른 링크</strong></div>
+    <div class="body">
+      <div class="row">
+        <a class="btn" href="members.html">멤버 보기</a>
+        <a class="btn" href="gallery.html">팬아트 갤러리</a>
+        <a class="btn" href="vote.html">최애 투표</a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="footer">© 팬이 만드는 비공식 허브 · 베타</div>
 </body>
 </html>
